--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@react-pdf-viewer/core": "^3.6.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "file-url": "^4.0.0",
     "framer-motion": "^5.6.0",
     "history": "^5.1.0",
     "mdb-ui-kit": "^3.10.1",
+    "pdfjs-dist": "^2.14.305",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-native-video": "^5.2.0",
+    "react-pdf": "^5.7.2",
+    "react-pdf-js": "^5.1.0",
+    "react-player": "^2.10.1",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
+    "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
+    "video-react": "^0.15.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -51,6 +61,7 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
+    "@react-pdf-viewer/default-layout": "^3.6.0",
     "prop-types": "^15.8.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.50.0"
